# agora

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml  codeql.yml
api/: index.ts
crawler/: crawl_new.py  crawl_shopify_bulk.py  pyproject.toml  seed_stores.py
crawler/crawler/: settings.py
crawler/crawler/data/: asins.json  shopify_stores.json
crawler/crawler/middlewares/: antibot.py
crawler/crawler/spiders/: amazon.py
docs/protocol/: getting-started.md  product-schema.md  spec.md
docs/protocol/examples/: full.json  minimal.json
docs/superpowers/plans/: 2026-04-07-demo-agent.md  2026-04-07-phase1-protocol-foundation.md  2026-04-07-phase2-ingestion-engine.md  2026-04-07-phase3-demo-data-sprint.md
docs/superpowers/specs/: 2026-04-07-commerce-layer-design.md  2026-04-07-data-sources-protocol-design.md  2026-04-07-demo-agent-design.md  2026-04-07-wave1-design.md
